Thu Aug 16 16:17:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* resource.cc (getrlimit): Return OPEN_MAX as current limit
	on RLIMIT_NOFILE.
	* syscalls.cc (getdtablesize): Return OPEN_MAX.
	* sysconf.cc (sysconf): Return OPEN_MAX on _SC_OPEN_MAX.
	* include/limits.h (OPEN_MAX): Define as 256.

Wed Aug 15 12:43:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* times.cc (utimes): Revert previous change. Just open the
	file using FILE_WRITE_ATTRIBUTES instead of GENERIC_WRITE
	on NT/W2K.

Wed Aug 15 12:18:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (set_nt_attribute): Return always -1 in case of
	a failure.
	* times.cc (utimes): On NTFS with ntsec ON, change the file's
	security descriptor temporarily to acquire write access if
	opening the file failed.

Wed Aug 15  9:42:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::is_nonblocking): New method.
	(fhandler_base::set_nonblocking): Ditto.
	* fhandler.h (fhandler_base): Declare new methods `is_nonblocking' and
	`set_nonblocking'.
	* fhandler_socket.cc (fhandler_socket::ioctl): Use `set_nonblocking'.
	* fhandler_tty.cc (fhandler_pty_master::process_slave_output):
	Use `is_nonblocking'.
	(fhandler_tty_slave::read): Ditto.
	(fhandler_tty_slave::ioctl): Use `set_nonblocking'.
	(fhandler_pty_master::ioctl): Ditto.
	* net.cc (cygwin_sendto): Fallback to winsock 1 functionality
	in case of nonblocking IO.
	(cygwin_recvfrom): Ditto.
	(cygwin_recv): Ditto.
	(cygwin_send): Ditto.
	* syscalls.cc (_read): Use `is_nonblocking'.

Tue Aug 14 11:05:26 2001  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump API version.

2001-08-14  Egor Duda  <deo@logos-m.ru>

	* spawn.cc (spawn_guts): Enable appropriate privilege before
	loading user's registry hive.

Mon Aug 13 22:34:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fcntl): Use new O_NONBLOCK_MASK define.
	* fhandler.h: Move definitions of O_NOSYMLINK, O_DIROPEN and