@@ -33,7 +33,7 @@ sysconf (int in)
 	/* FIXME: what's the right value?  _POSIX_ARG_MAX is only 4K */
 	return 1048576;
       case _SC_OPEN_MAX:
-	return OPEN_MAX;
+	return getdtablesize ();
       case _SC_PAGESIZE:
 	return getpagesize ();
       case _SC_CLK_TCK:
